@@ -1,7 +1,16 @@
 --------------------------------------------------------------------------------------------------------------------------------------------
+TAG v02-00-00
+--------------------------------------------------------------------------------------------------------------------------------------------
+Update to reflect API change for calo hit creation.
+Exception-handling change in ParticleMonitoring algorithm.
+Update a few header file include paths.
+
+--------------------------------------------------------------------------------------------------------------------------------------------
+--------------------------------------------------------------------------------------------------------------------------------------------
 TAG v01-01-00
 --------------------------------------------------------------------------------------------------------------------------------------------
 Efficiency improvements addressing hotspots identified by extensive algorithm profiling. Frequently use kd-trees to avoid expensive calculations.
+Improve specification of CMAKE_CXX_FLAGS.
 
 --------------------------------------------------------------------------------------------------------------------------------------------
 TAG v01-00-00
@@ -34,6 +43,7 @@ Tuning and improved exception handling.
 Address issues highlighted by coverity.
 Makefile and CMakeLists overhaul.
 
+--------------------------------------------------------------------------------------------------------------------------------------------
 --------------------------------------------------------------------------------------------------------------------------------------------
 TAG v00-06
 --------------------------------------------------------------------------------------------------------------------------------------------
